--- a/style.css
+++ b/style.css
@@ -59,84 +59,29 @@ body {
   }
   
   .card {
-    width: var(--card-width);
-    height: var(--card-height);
-    background: #191c29;
-    position: relative;
-    padding: 3px;
-    border-radius: 6px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    display: flex;
-    font-size: 1.5em;
-    color: rgb(88 199 250/0%);
-    cursor: pointer;
-    font-family: cursive;
-  }
-
-  .card:hover{
-    color: rgb(88 199 250/100%);
-    transition: color 1s;
-  }
-
-  .card:hover::before, .card:hover:after{
-    animation: none;
-    opacity: 0;
-  }
-
-  .card::before{
-    content: "";
-    width: 104%;
-    height: 102%;
-    border-radius: 8px;
-    background-image: linear-gradient(var(--rotate),#5ddcff, #3c67e3 43%, 4e00c2);
-    position: absolute;
-    z-index: -1;
-    top: -1%;
-    left: -2%;
-    animation: spin 2.5s linear infinite;
-  }
-
-  .card::after{
-    position: absolute;
-    content: "";
-    top: calc(var(--card-height)/6);
-    left: 0;
-    right: 0;
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-    margin: 0 auto;
-    transform: scale (0.8);
-    filter: blur(calc(var(--card-height)/6));
-    background-image: linear-gradient(var(--rotate)#5ddcff, #3c67e3 43%, 4e00c2);
-    opacity: 1;
-    transition: opacity .5s;
-    animation: spin 2.5s linear infinite;
-    
-  }
-
-  @keyframes spin{
-    0%{
-      --rotate:0deg;
+      width: 300px;
+      margin: 10px;
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 0 5px rgba(151, 3, 90, 0.3);
+      border-radius: 5px;
     }
-    100%{
-      --rotate:360deg;
-    }
-    }
+  
+
+  
 
     a{
       color: #212534;
       text-decoration: none;
       font-family: sans-serif;
-      font-weight: bold;
       margin-top: 2rem;
     }
   
   img {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height:100%;
+    align-items: center;
   }
   .quote-container {
     display: flex;
@@ -198,7 +143,7 @@ body {
 
   p{
     font-size: 20px;
-    padding: 30px;
+    padding: 5px;
     color: rgb(211, 208, 230);
   }
 
